<resources>
    <string name="app_name">NextText</string>
    <string name="action_settings">Settings</string>
    <string name="action_save_new_message_configure">Next</string>
    <string name="action_confirm_new_message">Save</string>
    <string name="action_cancel_confirm_new_message">Cancel</string>
    <string name="action_cancel_new_message_configure">Cancel</string>
    <string name="action_delete_select_message">Delete</string>
    <string name="action_delete_all_messages">Delete All Messages</string>

    <string name="empty_view_text">Once you added a new message, you\'ll\n see it listed here</string>

    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="sms">SMS</string>
    <string name="sms_content_hint">Type an SMS message here</string>
    <string name="email">E-mail</string>
    <string name="message_time_base">Time Base</string>
    <string name="message_location_base">Location Base</string>
    <string name="message_weather_base">Weather Base</string>
    <string name="message_title">enter message title</string>
    <string name="meesage_content">Enter message content</string>
    <string name="label_new_message">New Message</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="findContact">Find Contact</string>
    <string name="dummy_date">Friday, October, 21, 2017</string>
    <string name="dummy_time">7:00 PM</string>
    <string name="date">Date: </string>
    <string name="time">Time: </string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string-array name="drawer_titles">
        <item>All messages</item>
        <item>SMS only</item>
        <item>Email only</item>
    </string-array>
</resources>
